--- a/index.html
+++ b/index.html
@@ -35,5 +35,27 @@
       <li>Uyumak</li>
       <li>Müzik dinlemek</li>
     </ol>
+
+    <!-- ol>li*4>lorem2^^h1>lorem2 -->
+      <ol>
+        <li>Lorem, ipsum.</li>
+        <li>Vel, quidem.</li>
+        <li>Sed, praesentium!</li>
+        <li>Debitis, omnis?</li>
+      </ol>
+      <h1>Lorem, ipsum.</h1>
+
+      <!-- ol>li*4>lorem2^^h1>.lorem -->
+      <ol>
+        <li>Lorem, ipsum.</li>
+        <li>Aliquam, voluptatem!</li>
+        <li>Velit, recusandae!</li>
+        <li>Vel, repellat!</li>
+      </ol>
+      <h1>
+        <div class="lorem"></div>
+      </h1>
+
+
   </body>
 </html>
