--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Hakkımda</h2>
 
     <p>Merhaba.Ben Furkan İstanbulda Yaşıyorum. Bilgisayar mühendisiyim.</p>
+    <h2><i><a href=#footer>Sayfa sonu</a></i></h2>
     <br /><!--satır atlamasını istediğim için <br> etiketini kullandım-->
 
     <h2>Sevdiğim dizi</h2>
@@ -56,6 +57,67 @@
         <div class="lorem"></div>
       </h1>
 
+      <a href="https://picsum.photos/200/300" target="_blank" ><img src="https://picsum.photos/200/300"/></a>
+      <img src="https://picsum.photos/100/200"/><br><br><br>
 
+      <!--ol>li*3>lorem1>ul>li*3>lorem2--> 
+<ol>
+  <li>
+    Film<ul>
+      <li>Esaretin bedeli</li>
+      <li><a href=https://www.imdb.com/title/tt1853728/ target="_blank" >Django</a></li>
+      <li>Yeşil yol</li>
+    </ul>
+  </li>
+  <li>
+    Dizi<ul>
+      <li>Kurtlar vadisi</li>
+      <li>Game of thrones</li>
+      <li>gibi</li>
+    </ul>
+  </li>
+  <li>
+    kitap<ul>
+      <li><a href=https://www.goodreads.com/tr/book/show/170448.Animal_Farm target="_blank" >Hayvan çifliği</a></li>
+      <li>Küçük prens</li>
+      <li>Şeker portakalı</li>
+    </ul>
+  </li>
+</ol>
+
+      <h2>Ispanyolca suç sayılan hakaretler</h2>
+
+      <ol>
+        <li>Lorem, ipsum.</li>
+        <li>Quia, ipsum?</li>
+        <li>Neque, nesciunt!</li>
+        <li>Aspernatur, saepe.</li>
+        <li>Ducimus, officiis.</li>
+        <li>Aliquam, amet?</li>
+        <li>Cum, eaque.</li>
+        <li>Provident, iure?</li>
+        <li>Debitis, qui.</li>
+        <li>Dicta, sit!</li>
+      </ol>
+
+      <!--block ve inline elementleri kullanmak için aşağıda bir örnek-->
+      
+      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae facilis delectus e
+        xplicabo Quias,<strong>dicta autem asperiores laudantium maxime eligendii quidem est. Nostrum!
+          Molestias eum sit eligendi totam possimus, nam reiciendis quaerat cum in obcaecati omn</strong> 
+        is necessitatibus! Optio ex eveniet enim? Laborum deserunt non viio labore ratione.
+        Praesentium laudantium laboriosam eligendi adipisci placeat, beatae modi in aut blandi
+        tiis ullam facilis vero earum quis debitis voluptates eius enim cndi esse quod.
+        Ipsum eum ratione architecto <strong>nostrum, repellendus, nesciunt officia voluptate itaque, </strong>
+        aperiam debitis consequatur error soluta. Libero reprehenderit quarchitecto cum mollitia provident praesentium explicabo dolor!
+        Iure sit accusantium quis. Et officiis libero doloremque, rerum aliquid dolorum ex cup
+        iditate repudiandae repellat ratione, laboriosam quam obcaecati enumquam tempora iste laborum adipisci.
+        Odio qui ut nulla<em>fuga fugiat aut, optio ipsum corrupti id delectus saepe accusamus mo
+          lestiae commodi odit libero tenetur deserunt obcaecati dicta temp</em> 
+        Accusantium quae, unde a autem voluptas nostrum itaque placeat debitis dignissimos cul
+        pa, minus quisquam. Laborum sint repudiandae iusto reiciendis, be ipsam vero amet.
+        Pariatur voluptate quae et maxime! Consequuntur, ipsa voluptatibus. Quasi minima, hic </span>
+  
+      <h3 id="footer">Tüm hakları saklıdır <a href="tel:22222222">iletişim</a></h3>
   </body>
 </html>
